kubernetes/rabbitMQ-for-config/0-rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
#  namespace: amit
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672 # AMQP
            - containerPort: 15672 # Management UI
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
#  namespace: amit
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp-port  # Name for AMQP protocol
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management-port  # Name for Management UI
      protocol: TCP
      port: 15672
      targetPort: 15672
  type: ClusterIP



#  5672 → AMQP protocol (for communication with services).
#  15672 → RabbitMQ Management UI (for monitoring and management).
