kubernetes/rabbitMQ-for-config/2-discovery-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-service-deployment
#  namespace: amit
  labels:
    app: discovery-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-service
  template:
    metadata:
      labels:
        app: discovery-service
    spec:
      containers:
        - name: discovery-service
          image: justamitsaha/ms-discovery-service:basic
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-service # other pods in the cluster will identify this one with this field
#  namespace: amit
spec:
  selector:
    app: discovery-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
