kubernetes/rabbitMQ-for-config/3-identity-servcie.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service-deployment
#  namespace: amit
  labels:
    app: identity-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: identity-service
  template:
    metadata:
      labels:
        app: identity-service
    spec:
      containers:
        - name: identity-service
          image: justamitsaha/ms-identity-service:config_bus_update2
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service # other pods in the cluster will identify this one with this field
#  namespace: amit
spec:
  selector:
    app: identity-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090


#Check if the identity-service deployment is picking the correct environment variable:
#      kubectl describe pod <identity-service-pod-name> -n amit

# Check if the environment variable is set correctly inside the pod:
# kubectl exec -it identity-service-deployment-57d5849f6-4kcjc -n amit -- printenv | grep SPRING_CONFIG_IMPORT
